# OpenGrammar

./: .all-contributorsrc  .bumpversion.cfg  .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: black.yml  main.yml  release.yml
docs/: doc_requires.txt
docs/source/: bibliography.rst  conf.py  contributing.rst  contributors.rst  doc_requires.txt  index.rst  installation.rst  internals.rst  references.rst
docs/source/api/opengrammar/: index.rst
docs/source/api/opengrammar/parser/: index.rst
docs/source/api/opengrammar/parser/meta_syntax/: index.rst
docs/source/api/opengrammar/parser/transformer/: index.rst
opengrammar/: __init__.py  __main__.py  brain.py  data.py  experiment.py  learner.py
opengrammar/logics/gplif/: __init__.py  errors.py  model.py  syntax.py  transformer.py
opengrammar/logics/gplif/grammars/: formula.lark
opengrammar/mathematics/meta/: structures.py
opengrammar/model/: __init__.py  loss.py  meta.py  metrics.py  model.py
opengrammar/parser/: __init__.py  grammar.ug  meta_syntax.lark  meta_syntax.py  proof.og  syntax.lark  syntax.py  transformer.py
tests/: test_semantics.py  test_structures.py  test_syntax.py
tests/parser/: sample.ug  test_meta_syntax_ast.py
