[tool.towncrier]
package = "OpenGrammar"
package_dir = "opengrammar"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/vivekjoshy/OpenGrammar/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=.eggs --doctest-modules --doctest-glob=/*.py --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true

[project]
name = "opengrammar"
version = "0.1.0"
authors = [
    {name = "Vivek Joshy", email = "vivekjoshy@outlook.in"},
]
maintainers = [
  {name = "Vivek Joshy", email = "vivekjoshy@outlook.in"}
]
description = "Natural Language Inference Engine"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["parser", "nlp", "grammar"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 1 - Planning",
	"Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = [
    "lark~=1.2",
    "rich~=13.4",
    "typer~=0.9"
]

[project.urls]
Documentation = "https://opengrammar.readthedocs.io/en/stable"
Changelog = "https://github.com/OpenDebates/OpenGrammar/blob/main/CHANGELOG.rst"
Funding = "https://github.com/sponsors/OpenDebates"
Source = "https://github.com/OpenDebates/OpenGrammar"
Tracker = "https://github.com/OpenDebates/OpenGrammar/issues"


[tool.uv]
dev-dependencies = [
    "tox~=4.16",
    "mypy~=1.10",
    "pytest~=8.2",
    "coverage~=7.6",
    "pytest-cov~=5.0",
    "twine~=5.1",
    "build~=1.2",
    "isort~=5.13",
    "black~=24.8",
    "codecov~=2.1",
    "towncrier~=24.8",
    "bump-my-version~=0.26",
]

[tool.setuptools]
packages = ["opengrammar"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

