[metadata]
name = opengrammar
version = attr: opengrammar.__version__
description = Formal Logic to Natural Language Translator
author = Taven <taven@opendebates.net>
author_email = taven@opendebates.net
license = mit
license_file = LICENSE
url = https://github.com/OpenDebates/OpenGrammar
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifiers =
	Development Status :: 1 - Planning
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
keywords =
    parser
    syntax
    semantics
    linguistics

[options]
packages = find:
python_requires = >=3.11
install_requires =
    lark
    Babel

[options.extras_require]
docs =
	Sphinx
	furo
    Pygments
tests =
	pytest
	pytest-cov
release =
    isort
    twine
    codecov
    bump2version
    black
    towncrier
    build
